<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/pdtp_white"
            android:paddingHorizontal="10dp"
            android:elevation="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.smparkworld.parkdatetimepicker.ui.common.CircleImageButton
                android:id="@+id/btn_prev"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pdtp_ic_arrow_left"
                android:tint="@color/pdtp_black"
                style="@style/PDTP_CircleImageButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/pdtp_black"
                android:textSize="15dp"
                android:textStyle="bold"
                android:foreground="?selectableItemBackground"
                app:layout_constraintTop_toTopOf="@id/btn_prev"
                app:layout_constraintStart_toEndOf="@id/btn_prev"
                app:layout_constraintEnd_toStartOf="@id/btn_next"
                app:layout_constraintBottom_toBottomOf="@id/btn_prev"
                tools:text="1997년 12월" />

            <com.smparkworld.parkdatetimepicker.ui.common.CircleImageButton
                android:id="@+id/btn_next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/pdtp_ic_arrow_right"
                android:tint="@color/pdtp_black"
                style="@style/PDTP_CircleImageButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/btn_prev"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mon"
                tools:text="@string/pdtp_label_sun"/>

            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                app:layout_constraintTop_toTopOf="@id/sun"
                app:layout_constraintStart_toEndOf="@id/sun"
                app:layout_constraintEnd_toStartOf="@id/tue"
                tools:text="@string/pdtp_label_mon"/>

            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                app:layout_constraintTop_toTopOf="@id/mon"
                app:layout_constraintStart_toEndOf="@id/mon"
                app:layout_constraintEnd_toStartOf="@id/wed"
                tools:text="@string/pdtp_label_tue"/>

            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                app:layout_constraintTop_toTopOf="@id/tue"
                app:layout_constraintStart_toEndOf="@id/tue"
                app:layout_constraintEnd_toStartOf="@id/thu"
                tools:text="@string/pdtp_label_wed"/>

            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                app:layout_constraintTop_toTopOf="@id/wed"
                app:layout_constraintStart_toEndOf="@id/wed"
                app:layout_constraintEnd_toStartOf="@id/fri"
                tools:text="@string/pdtp_label_thu"/>

            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                app:layout_constraintTop_toTopOf="@id/thu"
                app:layout_constraintStart_toEndOf="@id/thu"
                app:layout_constraintEnd_toStartOf="@id/sat"
                tools:text="@string/pdtp_label_fri"/>

            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/pdtp_black"
                android:textSize="13dp"
                app:layout_constraintTop_toTopOf="@id/fri"
                app:layout_constraintStart_toEndOf="@id/fri"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/pdtp_label_sat"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingVertical="5dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/layout_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>